fix gap

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -53,7 +53,7 @@
   justify-content: flex-start;
   height: 100%;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   padding: 2rem 2rem 2rem 0;
 }
 
